# w95kg

./: .gitignore  README.md  build.py  helpers.py  keygen.py  pyproject.toml
keys/: __init__.py  oem.py  office.py  retail.py
static/: version.txt
w95kg/: __main__.py  utils.py
w95kg/keys/: __init__.py  oem.py  office.py  retail.py
