[project]
name = "w95kg"
version = "1.1.0"
description = "Windows 95 and Office 97 key generator and validator."
authors = [{ name = "frosty", email = "inthishouseofcards@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7"]

[project.scripts]
w95kg = "w95kg.__main__:cli"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
fixable = ["ALL"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
